--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Cheng Sizhe"
-  avatar           : "profile.jpg"
+  avatar           : "profile.png"
   bio              : "Undergraduate student at SUSTech(Southern University of Science and Technology)"
   location         : "Shenzhen, China"
   employer         :
